--- a/public/screen.css
+++ b/public/screen.css
@@ -9,4 +9,26 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.button {
+  margin-top: 20rem;
+  margin-bottom: 30rem;
+}
+
+.result {
+  margin-top: 15rem;
+  margin-bottom: 30rem;
+  margin-right: 2rem;
+}
+
+h1 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20rem;
+  margin-bottom: 40rem;
+  margin-right: 2rem;
+  background-color: aqua;
 }
